# xbrz-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: deploy_linux.yml  deploy_windows.yml
pkg/linux/: xbrz.desktop
